--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.5.9"
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@node-rs/argon2": "^1.8.3",
+    "hono": "^4.5.9",
+    "lucia": "^3.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
