--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "thotbit-backend",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "lint": "eslint . --fix",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^3.0.2",
@@ -12,6 +14,14 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "typescript-eslint": "^8.3.0",
     "wrangler": "^3.57.2"
   }
 }
